[package]
name = "toolbox"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[dependencies]
config = { version = "^0.15.18", features = ["yaml"]}
serde = { version = "^1.0.228", features = ["derive"]}
serde_json = { version = "^1.0.145"}
tower = { version = "^0.5.2"}
chrono = { version = "^0.4.42", features = ["serde"]}
uuid = { version = "^1.18.1", features = ["v4", "serde"]}
