[package]
name = "web-toolbox"
version = "0.1.0"
edition = "2024"
description = "A library that helps setup web apps in axum."
readme = "README.md"
license-file = "LICENSE"

[lib]
path = "src/lib.rs"

[features]
serde = ["dep:serde", "dep:serde_json"]
config = ["dep:config", "serde"]

[dependencies]
config = { version = "^0.15.18", features = ["yaml"], optional = true}
serde = { version = "^1.0.228", features = ["derive"], optional = true}
serde_json = { version = "^1.0.145", optional = true}
tower = { version = "^0.5.2"}
chrono = { version = "^0.4.42", features = ["serde"]}
uuid = { version = "^1.18.1", features = ["v4", "serde"]}
tracing-core = { version = "^0.1.34"}
